--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,10 +5,12 @@ on:
     branches: [ "master" ]
 
 jobs:
-  deploy:
+  install-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
+      - uses: bahmutov/npm-install@v1
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
