--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
+      - run:
+          name: "Install git"
+          command: apt-get update && apt-get install git -y
       - checkout
       - run:
           name: "Say hello"
