--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: node:9.11.1-slim
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: node:9.11.1
     steps:
       - run:
           name: "Install git"
