--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
+  ci:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
@@ -14,19 +14,7 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: echo "Testing in progress"
-      - run:
-          name: "Install nvm"
-          command: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash ; source ~/.bashrc && nvm install v9.11.1 ; nvm use v9.11.1 ; npm i ; npm test
-      - run:
-          name: "Install node 9.11.1"
-          command: source ~/.bashrc && nvm install v9.11.1
-      - run:
-          name: "install packages"
-          command: source ~/.bashrc && npm i
-      - run: 
-          name: "Test smart contract"
-          command: source ~/.bashrc && npm test
+          command: chmod +x ci.sh && ./ci.sh
         
 
 # Orchestrate jobs using workflows
@@ -34,4 +22,4 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello
+      - ci
