--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,14 +8,8 @@ jobs:
   install-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v3
-      - uses: bahmutov/npm-install@v1
-
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Install node packages
-        run: npm i
-
-      - name: Run tests
-        run: npm test
+        run: chmod +x ci.sh && ./ci.sh
